# pin-server

./: .gitmodules  CMakeLists.txt  PluginServer.cpp  Plugin_Log.cpp  README.en.md  README.md  user.cpp
cmake/: common.cmake
include/: PluginServer.h  Plugin_Log.h
include/Dialect/: CMakeLists.txt  PluginDialect.h  PluginDialect.td  PluginOps.h  PluginOps.td  PluginTypes.h
include/IR/: Decl.h  DeclCode.def  Operation.h  OperationCode.def  Type.h  TypeCode.def
include/PluginAPI/: BasicPluginAPI.h  BasicPluginOpsAPI.h  ControlFlowAPI.h  DataFlowAPI.h  PluginAPI_Server.h  PluginServerAPI.h
include/PluginServer/: ManagerSetup.h  PluginCom.h  PluginGrpc.h  PluginJson.h  PluginLog.h  PluginOptBase.h  PluginServer.h
include/user/: ArrayWidenPass.h  InlineFunctionPass.h  LocalVarSummeryPass.h  SimpleLICMPass.h  StructReorder.h  user.h
lib/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt  PluginDialect.cpp  PluginOps.cpp  PluginTypes.cpp
lib/PluginAPI/: ControlFlowAPI.cpp  DataFlowAPI.cpp  PluginAPI_Server.cpp  PluginServerAPI.cpp
lib/PluginServer/: PluginCom.cpp  PluginGrpc.cpp  PluginJson.cpp  PluginLog.cpp  PluginServer.cpp  main.cpp
protos/: plugin.proto
user/: ArrayWidenPass.cpp  InlineFunctionPass.cpp  LocalVarSummeryPass.cpp  SimpleLICMPass.cpp  StructReorder.cpp  user.cpp
